2007-12-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/installation.doc, doc/local/linking.doc: Documentation
	updated to reflect changes in MSVC++ project files

	* win32/itpp_acml.vcproj, win32/itpp_acml_tests/*.vcproj,
	win32/itpp_mkl.vcproj, win32/itpp_mkl_tests/*.vcproj: Replace
	explicit paths with LIB and INCLUDE environment variables

	With this change the user is responsible for setting the LIB and
	INCLUDE environment variables with proper directories to MKL or
	ACML librarary and include files.

	Besides, build multi-threaded DLL libraries by default.

	* itpp/base/binfile.cpp, itpp/base/copy_vector.h: Include missing
	header files to fix compilation using GCC 4.3

2007-12-11  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.h, itpp/comm/ldpc.cpp: Improvements to the
	generation of regular LDPC codes

2007-12-10  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/src/ldpc_bersim_awgn.cpp: Changed tutorial so it
	counts bit errors in entire block, not only systematic bits

	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: Fixed spelling error

2007-12-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* m4/acx_blas.m4: Improve autodetection of ACML libraries

	* itpp/base/algebra/qr.cpp: Fix incorrect precalculation of the
	workspace size for QR decomp.

	The size of the workspace memory is now checked for each of
	[dz]gerf_, [dz]orgqr_, [dz]geqp3_ and [dz]ungqr_ funcitions
	separately, because they operate on different matrices. Besides,
	R is now correctly initialised with A before quering for the
	workspace size.

	* itpp/base/algebra/svd.cpp: Improvements in calculation of the
	SVD workspace size

	Before resizing the current memory allocated for SVD workspace,
	check if the workspace query was sucessful. If not, use the
	default, but not optimum workspace size.

2007-12-09  Simon Wood  <sgwoodjr@users.sourceforge.net>

	* itpp/base/algebra/qr.cpp, itpp/base/algebra/svd.cpp: Added a