@@ -1,26 +1,0 @@
-cpp_tutorial_sources = \
-	$(top_srcdir)/doc/tutorial/src/bpsk.cpp \
-	$(top_srcdir)/doc/tutorial/src/convcode.cpp \
-	$(top_srcdir)/doc/tutorial/src/interleaver.cpp \
-	$(top_srcdir)/doc/tutorial/src/qpsk_simulation.cpp \
-	$(top_srcdir)/doc/tutorial/src/rayleigh.cpp \
-	$(top_srcdir)/doc/tutorial/src/read_it_file.cpp \
-	$(top_srcdir)/doc/tutorial/src/reedsolomon.cpp \
-	$(top_srcdir)/doc/tutorial/src/spread.cpp \
-	$(top_srcdir)/doc/tutorial/src/timer.cpp \
-	$(top_srcdir)/doc/tutorial/src/vector_and_matrix.cpp \
-	$(top_srcdir)/doc/tutorial/src/mimoconv.cpp \
-	$(top_srcdir)/doc/tutorial/src/write_it_file.cpp \
-	$(top_srcdir)/doc/tutorial/src/mog.cpp \
-	$(top_srcdir)/doc/tutorial/src/ldpc_gen_codes.cpp \
-	$(top_srcdir)/doc/tutorial/src/ldpc_bersim_awgn.cpp
-
-ref_tutorial_sources = \
-	$(top_srcdir)/doc/tutorial/src/bpsk.ref \
-	$(top_srcdir)/doc/tutorial/src/convcode.ref \
-	$(top_srcdir)/doc/tutorial/src/interleaver.ref \
-	$(top_srcdir)/doc/tutorial/src/qpsk_simulation.ref \
-	$(top_srcdir)/doc/tutorial/src/reedsolomon.ref \
-	$(top_srcdir)/doc/tutorial/src/spread.ref \
-	$(top_srcdir)/doc/tutorial/src/timer.ref \
-	$(top_srcdir)/doc/tutorial/src/vector_and_matrix.ref
